Fix overflow

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -66,6 +66,7 @@
   position: fixed;
   top: 96px;
   bottom: 0px;
+  overflow: auto;
 }
 
 #admin-panel {
